--- a/.gitignore
+++ b/.gitignore
@@ -75,6 +75,9 @@ paper/Manuscript*
 !paper/Manuscript_files
 !paper/Manuscript.Rmd
 
+# Authenitcation Manifestos
+data/raw/manifestos/manifesto_apikey.txt
+
 # code
 code/explore
 
