--- a/.gitignore
+++ b/.gitignore
@@ -66,14 +66,10 @@ lit
 # Models
 models
 
-# Plots
-Plots
-
 # Paper
 paper/Manuscript*
-!paper/Manuscript.pdf
-!paper/Manuscript_files
-!paper/Manuscript.Rmd
+# !paper/Manuscript.pdf
+# !paper/Manuscript.qmd
 
 # Authenitcation Manifestos
 data/raw/manifestos/manifesto_apikey.txt
